introduction: some more references etc

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -371,3 +371,397 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.491.4768R},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2018PhRvD..98d3528T,
+       author = {{Troxel}, M.~A. and {MacCrann}, N. and {Zuntz}, J. and {Eifler}, T.~F. and
+         {Krause}, E. and {Dodelson}, S. and {Gruen}, D. and {Blazek}, J. and
+         {Friedrich}, O. and {Samuroff}, S. and {Prat}, J. and {Secco}, L.~F. and
+         {Davis}, C. and {Fert{\'e}}, A. and {DeRose}, J. and {Alarcon}, A. and
+         {Amara}, A. and {Baxter}, E. and {Becker}, M.~R. and
+         {Bernstein}, G.~M. and {Bridle}, S.~L. and {Cawthon}, R. and
+         {Chang}, C. and {Choi}, A. and {De Vicente}, J. and
+         {Drlica-Wagner}, A. and {Elvin-Poole}, J. and {Frieman}, J. and
+         {Gatti}, M. and {Hartley}, W.~G. and {Honscheid}, K. and {Hoyle}, B. and
+         {Huff}, E.~M. and {Huterer}, D. and {Jain}, B. and {Jarvis}, M. and
+         {Kacprzak}, T. and {Kirk}, D. and {Kokron}, N. and {Krawiec}, C. and
+         {Lahav}, O. and {Liddle}, A.~R. and {Peacock}, J. and {Rau}, M.~M. and
+         {Refregier}, A. and {Rollins}, R.~P. and {Rozo}, E. and
+         {Rykoff}, E.~S. and {S{\'a}nchez}, C. and {Sevilla-Noarbe}, I. and
+         {Sheldon}, E. and {Stebbins}, A. and {Varga}, T.~N. and {Vielzeuf}, P. and
+         {Wang}, M. and {Wechsler}, R.~H. and {Yanny}, B. and
+         {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and {Allam}, S. and
+         {Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and
+         {Bertin}, E. and {Brooks}, D. and {Buckley-Geer}, E. and
+         {Burke}, D.~L. and {Carnero Rosell}, A. and {Carrasco Kind}, M. and
+         {Carretero}, J. and {Castander}, F.~J. and {Crocce}, M. and
+         {Cunha}, C.~E. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and
+         {DePoy}, D.~L. and {Desai}, S. and {Diehl}, H.~T. and
+         {Dietrich}, J.~P. and {Doel}, P. and {Fernandez}, E. and
+         {Flaugher}, B. and {Fosalba}, P. and {Garc{\'\i}a-Bellido}, J. and
+         {Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+         {Goldstein}, D.~A. and {Gruendl}, R.~A. and {Gschwend}, J. and
+         {Gutierrez}, G. and {James}, D.~J. and {Jeltema}, T. and
+         {Johnson}, M.~W.~G. and {Johnson}, M.~D. and {Kent}, S. and
+         {Kuehn}, K. and {Kuhlmann}, S. and {Kuropatkin}, N. and {Li}, T.~S. and
+         {Lima}, M. and {Lin}, H. and {Maia}, M.~A.~G. and {March}, M. and
+         {Marshall}, J.~L. and {Martini}, P. and {Melchior}, P. and
+         {Menanteau}, F. and {Miquel}, R. and {Mohr}, J.~J. and {Neilsen}, E. and
+         {Nichol}, R.~C. and {Nord}, B. and {Petravick}, D. and {Plazas}, A.~A. and
+         {Romer}, A.~K. and {Roodman}, A. and {Sako}, M. and {Sanchez}, E. and
+         {Scarpine}, V. and {Schindler}, R. and {Schubnell}, M. and {Smith}, M. and
+         {Smith}, R.~C. and {Soares-Santos}, M. and {Sobreira}, F. and
+         {Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and
+         {Tucker}, D.~L. and {Vikram}, V. and {Walker}, A.~R. and {Weller}, J. and
+         {Zhang}, Y. and {DES Collaboration}},
+        title = "{Dark Energy Survey Year 1 results: Cosmological constraints from cosmic shear}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = aug,
+       volume = {98},
+       number = {4},
+          eid = {043528},
+        pages = {043528},
+          doi = {10.1103/PhysRevD.98.043528},
+archivePrefix = {arXiv},
+       eprint = {1708.01538},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PhRvD..98d3528T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{HSC1,
+       author = {{Aihara}, Hiroaki and {Arimoto}, Nobuo and {Armstrong}, Robert and
+         {Arnouts}, St{\'e}phane and {Bahcall}, Neta A. and {Bickerton}, Steven and
+         {Bosch}, James and {Bundy}, Kevin and {Capak}, Peter L. and
+         {Chan}, James H.~H. and {Chiba}, Masashi and {Coupon}, Jean and
+         {Egami}, Eiichi and {Enoki}, Motohiro and {Finet}, Francois and
+         {Fujimori}, Hiroki and {Fujimoto}, Seiji and {Furusawa}, Hisanori and
+         {Furusawa}, Junko and {Goto}, Tomotsugu and {Goulding}, Andy and
+         {Greco}, Johnny P. and {Greene}, Jenny E. and {Gunn}, James E. and
+         {Hamana}, Takashi and {Harikane}, Yuichi and {Hashimoto}, Yasuhiro and
+         {Hattori}, Takashi and {Hayashi}, Masao and {Hayashi}, Yusuke and
+         {He{\l}miniak}, Krzysztof G. and {Higuchi}, Ryo and {Hikage}, Chiaki and
+         {Ho}, Paul T.~P. and {Hsieh}, Bau-Ching and {Huang}, Kuiyun and
+         {Huang}, Song and {Ikeda}, Hiroyuki and {Imanishi}, Masatoshi and
+         {Inoue}, Akio K. and {Iwasawa}, Kazushi and {Iwata}, Ikuru and
+         {Jaelani}, Anton T. and {Jian}, Hung-Yu and {Kamata}, Yukiko and
+         {Karoji}, Hiroshi and {Kashikawa}, Nobunari and {Katayama}, Nobuhiko and
+         {Kawanomoto}, Satoshi and {Kayo}, Issha and {Koda}, Jin and
+         {Koike}, Michitaro and {Kojima}, Takashi and {Komiyama}, Yutaka and
+         {Konno}, Akira and {Koshida}, Shintaro and {Koyama}, Yusei and
+         {Kusakabe}, Haruka and {Leauthaud}, Alexie and {Lee}, Chien-Hsiu and
+         {Lin}, Lihwai and {Lin}, Yen-Ting and {Lupton}, Robert H. and {Mand
+        elbaum}, Rachel and {Matsuoka}, Yoshiki and {Medezinski}, Elinor and
+         {Mineo}, Sogo and {Miyama}, Shoken and {Miyatake}, Hironao and
+         {Miyazaki}, Satoshi and {Momose}, Rieko and {More}, Anupreeta and
+         {More}, Surhud and {Moritani}, Yuki and {Moriya}, Takashi J. and
+         {Morokuma}, Tomoki and {Mukae}, Shiro and {Murata}, Ryoma and
+         {Murayama}, Hitoshi and {Nagao}, Tohru and {Nakata}, Fumiaki and
+         {Niida}, Mana and {Niikura}, Hiroko and {Nishizawa}, Atsushi J. and
+         {Obuchi}, Yoshiyuki and {Oguri}, Masamune and {Oishi}, Yukie and
+         {Okabe}, Nobuhiro and {Okamoto}, Sakurako and {Okura}, Yuki and
+         {Ono}, Yoshiaki and {Onodera}, Masato and {Onoue}, Masafusa and
+         {Osato}, Ken and {Ouchi}, Masami and {Price}, Paul A. and
+         {Pyo}, Tae-Soo and {Sako}, Masao and {Sawicki}, Marcin and
+         {Shibuya}, Takatoshi and {Shimasaku}, Kazuhiro and {Shimono}, Atsushi and
+         {Shirasaki}, Masato and {Silverman}, John D. and {Simet}, Melanie and
+         {Speagle}, Joshua and {Spergel}, David N. and {Strauss}, Michael A. and
+         {Sugahara}, Yuma and {Sugiyama}, Naoshi and {Suto}, Yasushi and
+         {Suyu}, Sherry H. and {Suzuki}, Nao and {Tait}, Philip J. and
+         {Takada}, Masahiro and {Takata}, Tadafumi and {Tamura}, Naoyuki and
+         {Tanaka}, Manobu M. and {Tanaka}, Masaomi and {Tanaka}, Masayuki and
+         {Tanaka}, Yoko and {Terai}, Tsuyoshi and {Terashima}, Yuichi and
+         {Toba}, Yoshiki and {Tominaga}, Nozomu and {Toshikawa}, Jun and
+         {Turner}, Edwin L. and {Uchida}, Tomohisa and {Uchiyama}, Hisakazu and
+         {Umetsu}, Keiichi and {Uraguchi}, Fumihiro and {Urata}, Yuji and
+         {Usuda}, Tomonori and {Utsumi}, Yousuke and {Wang}, Shiang-Yu and
+         {Wang}, Wei-Hao and {Wong}, Kenneth C. and {Yabe}, Kiyoto and
+         {Yamada}, Yoshihiko and {Yamanoi}, Hitomi and {Yasuda}, Naoki and
+         {Yeh}, Sherry and {Yonehara}, Atsunori and {Yuma}, Suraphong},
+        title = "{The Hyper Suprime-Cam SSP Survey: Overview and survey design}",
+      journal = {\pasj},
+     keywords = {cosmology: observations, galaxies: general, large-scale structure of universe, surveys, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2018,
+        month = jan,
+       volume = {70},
+          eid = {S4},
+        pages = {S4},
+          doi = {10.1093/pasj/psx066},
+archivePrefix = {arXiv},
+       eprint = {1704.05858},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PASJ...70S...4A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{HSC2,
+       author = {{Hikage}, Chiaki and {Oguri}, Masamune and {Hamana}, Takashi and
+         {More}, Surhud and {Mandelbaum}, Rachel and {Takada}, Masahiro and
+         {K{\"o}hlinger}, Fabian and {Miyatake}, Hironao and
+         {Nishizawa}, Atsushi J. and {Aihara}, Hiroaki and {Armstrong}, Robert and
+         {Bosch}, James and {Coupon}, Jean and {Ducout}, Anne and {Ho}, Paul and
+         {Hsieh}, Bau-Ching and {Komiyama}, Yutaka and
+         {Lanusse}, Fran{\c{c}}ois and {Leauthaud}, Alexie and
+         {Lupton}, Robert H. and {Medezinski}, Elinor and {Mineo}, Sogo and
+         {Miyama}, Shoken and {Miyazaki}, Satoshi and {Murata}, Ryoma and
+         {Murayama}, Hitoshi and {Shirasaki}, Masato and
+         {Sif{\'o}n}, Crist{\'o}bal and {Simet}, Melanie and {Speagle}, Joshua and
+         {Spergel}, David N. and {Strauss}, Michael A. and {Sugiyama}, Naoshi and
+         {Tanaka}, Masayuki and {Utsumi}, Yousuke and {Wang}, Shiang-Yu and
+         {Yamada}, Yoshihiko},
+        title = "{Cosmology from cosmic shear power spectra with Subaru Hyper Suprime-Cam first-year data}",
+      journal = {\pasj},
+     keywords = {dark matter, gravitational lensing: weak, large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = apr,
+       volume = {71},
+       number = {2},
+          eid = {43},
+        pages = {43},
+          doi = {10.1093/pasj/psz010},
+archivePrefix = {arXiv},
+       eprint = {1809.09148},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PASJ...71...43H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{DES1,
+       author = {{Drlica-Wagner}, A. and {Sevilla-Noarbe}, I. and {Rykoff}, E.~S. and
+         {Gruendl}, R.~A. and {Yanny}, B. and {Tucker}, D.~L. and {Hoyle}, B. and
+         {Carnero Rosell}, A. and {Bernstein}, G.~M. and {Bechtol}, K. and
+         {Becker}, M.~R. and {Benoit-L{\'e}vy}, A. and {Bertin}, E. and
+         {Carrasco Kind}, M. and {Davis}, C. and {de Vicente}, J. and
+         {Diehl}, H.~T. and {Gruen}, D. and {Hartley}, W.~G. and {Leistedt}, B. and
+         {Li}, T.~S. and {Marshall}, J.~L. and {Neilsen}, E. and {Rau}, M.~M. and
+         {Sheldon}, E. and {Smith}, J. and {Troxel}, M.~A. and {Wyatt}, S. and
+         {Zhang}, Y. and {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and
+         {Allam}, S. and {Banerji}, M. and {Brooks}, D. and {Buckley-Geer}, E. and
+         {Burke}, D.~L. and {Capozzi}, D. and {Carretero}, J. and
+         {Cunha}, C.~E. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and
+         {DePoy}, D.~L. and {Desai}, S. and {Dietrich}, J.~P. and {Doel}, P. and
+         {Evrard}, A.~E. and {Fausti Neto}, A. and {Flaugher}, B. and
+         {Fosalba}, P. and {Frieman}, J. and {Garc{\'\i}a-Bellido}, J. and
+         {Gerdes}, D.~W. and {Giannantonio}, T. and {Gschwend}, J. and
+         {Gutierrez}, G. and {Honscheid}, K. and {James}, D.~J. and
+         {Jeltema}, T. and {Kuehn}, K. and {Kuhlmann}, S. and {Kuropatkin}, N. and
+         {Lahav}, O. and {Lima}, M. and {Lin}, H. and {Maia}, M.~A.~G. and
+         {Martini}, P. and {McMahon}, R.~G. and {Melchior}, P. and
+         {Menanteau}, F. and {Miquel}, R. and {Nichol}, R.~C. and {Ogand
+        o}, R.~L.~C. and {Plazas}, A.~A. and {Romer}, A.~K. and {Roodman}, A. and
+         {Sanchez}, E. and {Scarpine}, V. and {Schindler}, R. and
+         {Schubnell}, M. and {Smith}, M. and {Smith}, R.~C. and
+         {Soares-Santos}, M. and {Sobreira}, F. and {Suchyta}, E. and
+         {Tarle}, G. and {Vikram}, V. and {Walker}, A.~R. and {Wechsler}, R.~H. and
+         {Zuntz}, J. and {DES Collaboration}},
+        title = "{Dark Energy Survey Year 1 Results: The Photometric Data Set for Cosmology}",
+      journal = {\apjs},
+     keywords = {catalogs, cosmology: observations, surveys, techniques: image processing, techniques: photometric, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2018,
+        month = apr,
+       volume = {235},
+       number = {2},
+          eid = {33},
+        pages = {33},
+          doi = {10.3847/1538-4365/aab4f5},
+archivePrefix = {arXiv},
+       eprint = {1708.01531},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJS..235...33D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{DES2,
+       author = {{Zuntz}, J. and {Sheldon}, E. and {Samuroff}, S. and {Troxel}, M.~A. and
+         {Jarvis}, M. and {MacCrann}, N. and {Gruen}, D. and {Prat}, J. and
+         {S{\'a}nchez}, C. and {Choi}, A. and {Bridle}, S.~L. and
+         {Bernstein}, G.~M. and {Dodelson}, S. and {Drlica-Wagner}, A. and
+         {Fang}, Y. and {Gruendl}, R.~A. and {Hoyle}, B. and {Huff}, E.~M. and
+         {Jain}, B. and {Kirk}, D. and {Kacprzak}, T. and {Krawiec}, C. and
+         {Plazas}, A.~A. and {Rollins}, R.~P. and {Rykoff}, E.~S. and
+         {Sevilla-Noarbe}, I. and {Soergel}, B. and {Varga}, T.~N. and
+         {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and {Allam}, S. and
+         {Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and
+         {Bertin}, E. and {Buckley-Geer}, E. and {Burke}, D.~L. and
+         {Carnero Rosell}, A. and {Carrasco Kind}, M. and {Carretero}, J. and
+         {Castander}, F.~J. and {Crocce}, M. and {Cunha}, C.~E. and
+         {D'Andrea}, C.~B. and {da Costa}, L.~N. and {Davis}, C. and
+         {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and {Doel}, P. and
+         {Eifler}, T.~F. and {Estrada}, J. and {Evrard}, A.~E. and
+         {Fausti Neto}, A. and {Fernandez}, E. and {Flaugher}, B. and
+         {Fosalba}, P. and {Frieman}, J. and {Garc{\'\i}a-Bellido}, J. and
+         {Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
+         {Gschwend}, J. and {Gutierrez}, G. and {Hartley}, W.~G. and
+         {Honscheid}, K. and {James}, D.~J. and {Jeltema}, T. and
+         {Johnson}, M.~W.~G. and {Johnson}, M.~D. and {Kuehn}, K. and
+         {Kuhlmann}, S. and {Kuropatkin}, N. and {Lahav}, O. and {Li}, T.~S. and
+         {Lima}, M. and {Maia}, M.~A.~G. and {March}, M. and {Martini}, P. and
+         {Melchior}, P. and {Menanteau}, F. and {Miller}, C.~J. and
+         {Miquel}, R. and {Mohr}, J.~J. and {Neilsen}, E. and {Nichol}, R.~C. and
+         {Ogando}, R.~L.~C. and {Roe}, N. and {Romer}, A.~K. and {Roodman}, A. and
+         {Sanchez}, E. and {Scarpine}, V. and {Schindler}, R. and
+         {Schubnell}, M. and {Smith}, M. and {Smith}, R.~C. and
+         {Soares-Santos}, M. and {Sobreira}, F. and {Suchyta}, E. and
+         {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and
+         {Tucker}, D.~L. and {Vikram}, V. and {Walker}, A.~R. and
+         {Wechsler}, R.~H. and {Zhang}, Y. and {DES Collaboration}},
+        title = "{Dark Energy Survey Year 1 results: weak lensing shape catalogues}",
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, methods: data analysis, techniques: image processing, catalogues, surveys, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = nov,
+       volume = {481},
+       number = {1},
+        pages = {1149-1182},
+          doi = {10.1093/mnras/sty2219},
+archivePrefix = {arXiv},
+       eprint = {1708.01533},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.481.1149Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2019NatAs...3..212S,
+       author = {{Salvato}, Mara and {Ilbert}, Olivier and {Hoyle}, Ben},
+        title = "{The many flavours of photometric redshifts}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Astrophysics of Galaxies},
+         year = 2019,
+        month = jun,
+       volume = {3},
+        pages = {212-222},
+          doi = {10.1038/s41550-018-0478-0},
+archivePrefix = {arXiv},
+       eprint = {1805.12574},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019NatAs...3..212S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Newman08,
+       author = {{Newman}, Jeffrey A.},
+        title = "{Calibrating Redshift Distributions beyond Spectroscopic Limits with Cross-Correlations}",
+      journal = {\apj},
+     keywords = {galaxies: distances and redshifts, large-scale structure of universe, methods: miscellaneous, surveys, Astrophysics},
+         year = 2008,
+        month = sep,
+       volume = {684},
+       number = {1},
+        pages = {88-101},
+          doi = {10.1086/589982},
+archivePrefix = {arXiv},
+       eprint = {0805.1409},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...684...88N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{MatthewsNewman,
+       author = {{Matthews}, Daniel J. and {Newman}, Jeffrey A.},
+        title = "{Reconstructing Redshift Distributions with Cross-correlations: Tests and an Optimized Recipe}",
+      journal = {\apj},
+     keywords = {cosmology: observations, galaxies: distances and redshifts, large-scale structure of universe, surveys, Astrophysics - Cosmology and Extragalactic Astrophysics},
+         year = 2010,
+        month = sep,
+       volume = {721},
+       number = {1},
+        pages = {456-468},
+          doi = {10.1088/0004-637X/721/1/456},
+archivePrefix = {arXiv},
+       eprint = {1003.0687},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...721..456M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Menard,
+       author = {{M{\'e}nard}, Brice and {Scranton}, Ryan and {Schmidt}, Samuel and
+         {Morrison}, Chris and {Jeong}, Donghui and {Budavari}, Tamas and
+         {Rahman}, Mubdi},
+        title = "{Clustering-based redshift estimation: method and application to data}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2013,
+        month = mar,
+          eid = {arXiv:1303.4722},
+        pages = {arXiv:1303.4722},
+archivePrefix = {arXiv},
+       eprint = {1303.4722},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013arXiv1303.4722M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Lima,
+       author = {{Lima}, Marcos and {Cunha}, Carlos E. and {Oyaizu}, Hiroaki and
+         {Frieman}, Joshua and {Lin}, Huan and {Sheldon}, Erin S.},
+        title = "{Estimating the redshift distribution of photometric galaxy samples}",
+      journal = {\mnras},
+     keywords = {galaxies: distances and redshifts, galaxies: statistics, distance scale, large-scale structure of Universe, Astrophysics},
+         year = 2008,
+        month = oct,
+       volume = {390},
+       number = {1},
+        pages = {118-130},
+          doi = {10.1111/j.1365-2966.2008.13510.x},
+archivePrefix = {arXiv},
+       eprint = {0801.3822},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008MNRAS.390..118L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Bonnett,
+       author = {{Bonnett}, C. and {Troxel}, M.~A. and {Hartley}, W. and {Amara}, A. and
+         {Leistedt}, B. and {Becker}, M.~R. and {Bernstein}, G.~M. and
+         {Bridle}, S.~L. and {Bruderer}, C. and {Busha}, M.~T. and
+         {Carrasco Kind}, M. and {Childress}, M.~J. and {Castander}, F.~J. and
+         {Chang}, C. and {Crocce}, M. and {Davis}, T.~M. and {Eifler}, T.~F. and
+         {Frieman}, J. and {Gangkofner}, C. and {Gaztanaga}, E. and
+         {Glazebrook}, K. and {Gruen}, D. and {Kacprzak}, T. and {King}, A. and
+         {Kwan}, J. and {Lahav}, O. and {Lewis}, G. and {Lidman}, C. and
+         {Lin}, H. and {MacCrann}, N. and {Miquel}, R. and {O'Neill}, C.~R. and
+         {Palmese}, A. and {Peiris}, H.~V. and {Refregier}, A. and {Rozo}, E. and
+         {Rykoff}, E.~S. and {Sadeh}, I. and {S{\'a}nchez}, C. and
+         {Sheldon}, E. and {Uddin}, S. and {Wechsler}, R.~H. and {Zuntz}, J. and
+         {Abbott}, T. and {Abdalla}, F.~B. and {Allam}, S. and {Armstrong}, R. and
+         {Banerji}, M. and {Bauer}, A.~H. and {Benoit-L{\'e}vy}, A. and
+         {Bertin}, E. and {Brooks}, D. and {Buckley-Geer}, E. and
+         {Burke}, D.~L. and {Capozzi}, D. and {Carnero Rosell}, A. and
+         {Carretero}, J. and {Cunha}, C.~E. and {D'Andrea}, C.~B. and
+         {da Costa}, L.~N. and {DePoy}, D.~L. and {Desai}, S. and
+         {Diehl}, H.~T. and {Dietrich}, J.~P. and {Doel}, P. and
+         {Fausti Neto}, A. and {Fernandez}, E. and {Flaugher}, B. and
+         {Fosalba}, P. and {Gerdes}, D.~W. and {Gruendl}, R.~A. and
+         {Honscheid}, K. and {Jain}, B. and {James}, D.~J. and {Jarvis}, M. and
+         {Kim}, A.~G. and {Kuehn}, K. and {Kuropatkin}, N. and {Li}, T.~S. and
+         {Lima}, M. and {Maia}, M.~A.~G. and {March}, M. and {Marshall}, J.~L. and
+         {Martini}, P. and {Melchior}, P. and {Miller}, C.~J. and {Neilsen}, E. and
+         {Nichol}, R.~C. and {Nord}, B. and {Ogando}, R. and {Plazas}, A.~A. and
+         {Reil}, K. and {Romer}, A.~K. and {Roodman}, A. and {Sako}, M. and
+         {Sanchez}, E. and {Santiago}, B. and {Smith}, R.~C. and
+         {Soares-Santos}, M. and {Sobreira}, F. and {Suchyta}, E. and
+         {Swanson}, M.~E.~C. and {Tarle}, G. and {Thaler}, J. and {Thomas}, D. and
+         {Vikram}, V. and {Walker}, A.~R. and {Dark Energy Survey Collaboration}},
+        title = "{Redshift distributions of galaxies in the Dark Energy Survey Science Verification shear catalogue and implications for weak lensing}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2016,
+        month = aug,
+       volume = {94},
+       number = {4},
+          eid = {042005},
+        pages = {042005},
+          doi = {10.1103/PhysRevD.94.042005},
+archivePrefix = {arXiv},
+       eprint = {1507.05909},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016PhRvD..94d2005B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
