--- a/nzmarg.tex
+++ b/nzmarg.tex
@@ -83,15 +83,18 @@
 %-------------------------------------------------------------------
 
 \section{Introduction}
-Weak gravitational lensing by the large scale structure of the universe (cosmic shear) is a powerful probe of cosmology. This field is making rapid progress thanks to current and upcoming dedicated surveys, which allow to test the predictions of the standard $\Lambda$CDM cosmological model. In particular, these surveys constrain key parameters like the Hubble constant, the matter density, and the amplitude of the matter power spectrum to unprecedented precision. The main observable of weak lensing experiments are distortions in the images of background galaxies, which are observed statistically from large samples of galaxies.
+Weak gravitational lensing by the large scale structure of the universe (cosmic shear) is a powerful probe of cosmology. This field is making rapid progress thanks to current and upcoming dedicated surveys like the Dark Energy Survey \cite[DES; ][]{DES1, DES2}, the Subaru Hyper Suprime-Cam \cite[HSC; ][]{HSC1, HSC2} , and the ESO Kilo-Degree Survey \cite[KiDS; ][]{2015MNRAS.454.3500K, hildebrandt18}. These surveys allow testing the predictions of the standard $\Lambda$CDM cosmological model by constraining key parameters like the Hubble constant, the matter density, and the amplitude of the matter power spectrum to unprecedented precision. The main observable of weak lensing experiments are distortions in the images of background galaxies, which are observed statistically from large samples of galaxies.
 
- In order to theoretically model the observed signal a precise calibration of the source redshift distribution is required. Surveys typically observe millions of galaxies which are divided into several tomographic redshift bins. Given the large number of sources a complete spectroscopic redshift measurement is infeasible and therefore the redshift distribution is estimated from photometry. Several methods of photometric redshift calibration have been developed, such as direct calibrations with spectroscopic subsamples that are representative of the full sample or angular cross-correlation measurements with spectroscopic catalogues that overlap in redshift. However, it is not only crucial to adopt a calibration method that estimates the true redshift distribution as precisely as possible, but also to choose a model that is flexible enough to describe the redshift distribution accurately. Furthermore, such a model should allow us to propagate the uncertainties on the redshift distribution into the actual cosmic shear analysis. 
+ In order to theoretically model the observed signal a precise calibration of the source redshift distribution is required. Surveys typically observe millions of galaxies which are divided into several tomographic redshift bins. Given the large number of sources a complete spectroscopic redshift measurement is infeasible and therefore the redshift distribution is estimated from photometry \citep{2019NatAs...3..212S}. Several methods of photometric redshift calibration have been developed, such as direct calibrations with spectroscopic subsamples that are representative of the full sample \citep{Lima, Bonnett, 2017MNRAS.465.1454H} or angular cross-correlation measurements with spectroscopic catalogues that overlap in redshift \cite[e.g. ][]{Newman08,MatthewsNewman, Menard}. However, it is not only crucial to adopt a calibration method that estimates the true redshift distribution as precisely as possible, but also to choose a model that is flexible enough to describe the redshift distribution accurately. Furthermore, such a model should allow us to propagate the uncertainties on the redshift distribution into the actual cosmic shear analysis. 
  
- Recently, \cite{2020MNRAS.491.4768R} applied hierarchical logistic Gaussian processes as a method to calibrate redshift distribution of galaxy samples using cross-correlation measurements with overlapping spectroscopic samples. Gaussian processes are nonparametric, i.e. they are not limited by a functional form, and therefore they fulfil the condition of being able to accurately fit the redshift distribution. However, since a gaussian process is an infinite collection of random variables, an implementation of the gaussian process into the weak lensing likelihood with fit parameters acting as nuisance parameters and subsequent marginalisation proves to be a challenging task. Therefore it is advantageous to parametrise the redshift distribution using a model with a finite number of free parameters and enough flexibility to fit the actual data properly.
+ Recently, \cite{2020MNRAS.491.4768R} applied hierarchical logistic Gaussian processes as a method to calibrate redshift distributions of galaxy samples via cross-correlation measurements with overlapping spectroscopic samples. Gaussian processes are nonparametric, i.e. they are not limited by a functional form, and therefore they fulfil the condition of being able to accurately fit the redshift distribution. However, since the fit parameters of the gaussian process are non-linear, an implementation of the gaussian process into the weak lensing likelihood with fit parameters acting as nuisance parameters and subsequent marginalisation proves to be a challenging task. Therefore it is advantageous to parametrise the redshift distribution using a model with linear fit parameters, so that we can analytically marginalise over nuisance parameters.
 
-In this paper we present a parametrisation of the redshift distribution of samples of galaxies as a 'comb', i.e. a modified gaussian mixture model with fixed, equidistant separation between components, an identical variance, and a fixed number of components. The amplitudes of each gaussian component serve as fit parameters in the redshift distribution calibration. We implement this model into a weak lensing likelihood. Since our model is linear in the fit parameters we can analytically marginalise over the fitted amplitudes. The advantage of this procedure is that we can use a large number of components to fit the redshift distribution which gives the model enough flexibility to fit a potentially complex redshift distribution. At the same time we do not increase the total number of free parameters of the likelihood, so that it is still feasible to sample the likelihood via MCMC without a significant increase in runtime. Additionally, the correlation between fit parameters is fully propagated into the likelihood.
-We test our model by analysing cosmic shear data from KiDS  \citep[Kilo Degree Survey;][]{2015MNRAS.454.3500K,2015A&A...582A..62D,2017A&A...604A.134D} and VIKING \citep[VISTA Kilo-Degree Infrared Galaxy Survey;][]{2013Msngr.154...32E}. In particular, we analyse the dataset of \cite{hildebrandt18} by fitting the comb model to the redshift distribution histograms that were calibrated using a weighted direct calibration with deep spectroscopic catalogues.
-However, our model has a disadvantage compared to the cosmic shear analysis of  \cite{hildebrandt18}: When modelling the 2-point shear correlation function, the authors introduce nuisance parameters with gaussian priors that linearly shift the precalibrated redshift distribution of each tomographic bin. These shifts represent the uncertainties in the photometric redshift calibration, which are marginalised when sampling the likelihood via MCMC. A linear shift does not capture the full variance of the redshift distribution, which is why it particularly interesting to study a model that integrates the full variance. Including nuisance parameters that shift the redshift distribution allows for an additional self-calibration of the redshift distribution using cosmic shear data. While in principle we could do the same procedure with the comb model of the redshift distribution, this is infeasible in practice because of the large number of parameters that characterise the redshift distribution which is why we choose to analytically marginalise over these parameters. In order to allow the cosmic shear data to calibrate the redshift distribution we adopt a second calibration step: after fitting the comb model to the redshift histograms we apply an iterative fitting method of both cosmological and nuisance parameters. The best-fit nuisance parameters then represent a model of the redshift distribution calibrated both with deep spectroscopic catalogues and cosmic shear data. When sampling the cosmological parameters we marginalize over this set of nuisance parameters.
+In this paper we present a parametrisation of the redshift distribution of samples of galaxies as a 'comb', i.e. a modified gaussian mixture model with fixed, equidistant separation between components, an identical variance, and a fixed number of components. The amplitudes of each gaussian component serve as fit parameters in the redshift distribution calibration. We implement this model into a weak lensing likelihood. Since this model is linear in the fit parameters we can analytically marginalise over the fitted amplitudes. The advantage of this procedure is that we can use a large number of components to fit the redshift distribution which gives the model enough flexibility to fit a potentially complex redshift distribution. At the same time we do not increase the total number of free parameters of the likelihood, so that it is still feasible to sample the likelihood via MCMC without a significant increase in runtime. Additionally, the correlation between fit parameters is fully propagated into the likelihood.
+
+We test our model by analysing cosmic shear data from KiDS and VIKING \citep[VISTA Kilo-Degree Infrared Galaxy Survey;][]{2013Msngr.154...32E}. In particular, we analyse the dataset of \cite{hildebrandt18} by fitting the comb model to the redshift distribution histograms that were calibrated using a weighted direct calibration with deep spectroscopic catalogues.
+The treatment of uncertainties in the photometric redshift calibration is the main difference between our analysis and \cite{hildebrandt18}: When modelling the 2-point shear correlation function, the authors introduce nuisance parameters with gaussian priors that linearly shift the precalibrated redshift distribution of each tomographic bin. These shifts represent the uncertainties in the photometric redshift calibration, which are marginalised out when sampling the likelihood via MCMC. A linear shift does not capture the full variance of the redshift distribution, which is why it particularly interesting to study a model that takes the full variance into account. Including nuisance parameters that shift the redshift distribution allows for an additional self-calibration of the redshift distribution when sampling the weak lensing likelihood. While in principle a self-calibration with the comb model of the redshift distribution is possible, it is infeasible in practice because of the large number of parameters that characterise the redshift distribution. This is the reason why we choose to analytically marginalise over nuisance parameters arising from the redshift distribution calibration. 
+
+In order to allow the cosmic shear data to calibrate the redshift distribution we adopt a second calibration step: after fitting the comb model to the redshift histograms we apply an iterative fitting method of both cosmological and nuisance parameters. The best-fit nuisance parameters then represent a model of the redshift distribution calibrated both with deep spectroscopic catalogues and cosmic shear data. When sampling the weak lensing likelihood we marginalize over this set of nuisance parameters. The constraints on cosmological parameters are then compared to the fiducial result of \cite{hildebrandt18}.
  
 The paper is structured as follows: In Sect. \ref{sec:data} the data products are described. The redshift distribution model is described in Sect \ref{sec:comb} and the theoretical modelling of the cosmic shear signal with analytic marginalisation over nuisance parameters is described in Sect \ref{sec:likelihood}. In Sect. \ref{sec:calibration} the redshift distribution calibration is described. Results are presented in Sect. \ref{sec:results} and discussed in Sect. \ref{sec:discussion}.
  
@@ -103,7 +106,7 @@ We use data from the European Southern Observatory's Kilo Degree Survey \citep[K
 
 In the fiducial KV450 cosmic shear analysis, presented in \cite{hildebrandt18}, the combined KiDS+VIKING data set \citep{2019A&A...632A..34W} is binned into five tomographic redshift bins based on their most probable Bayesian redshift $z_B$, inferred with the photo-z code {\sc BPZ} \citep{2000ApJ...536..571B}. Four bins of width $\Delta z = 0.2$ in the range $0.1 < z_{\rm B} <0.9$ and a fifth bin with $0.9 < z_{\rm B} < 1.2$ are defined and calibrated using the aforementioned direct calibration method. The photometric redshift distribution is then used to model the 2-point shear correlation function and constraints on cosmological parameters are derived using an MCMC sampling of the weak lensing likelihood. 
 
-In our analysis we use the same data set that was analysed in \cite{hildebrandt18}, i.e. the redshift distribution histograms in five tomographic bins with the corresponding covariance matrix between redshift bins and the 2-point shear correlation function measurements.
+In this work we use the same data set that was analysed in \cite{hildebrandt18}, i.e. the redshift distribution histograms in five tomographic bins with the corresponding covariance matrix between redshift bins and the 2-point shear correlation function measurements.
 
 %these uncertainties are taken into account by introducing nuisance parameters that linearly shift the redshift distribution of each tomographic bin when modelling the 2-point shear correlation functions.  However, linear shifts of the redshift distribution do not capture the full variance of the distributions and therefore it is worth testing to what extent the particular choice of nuisance parameters has an impact on the inferred constraints on cosmological parameters.The redshift distribution of each bin was inferred using the fiducial direct calibration method with deep spectroscopic surveys (DIR) which also provides a covariance matrix that was estimated from a bootstrap analysis. The observable used in the likelihood analysis is the 2-point shear correlation function $\xi(\theta)$ between tomographic bins.
 \section{Redshift distribution model}
@@ -292,20 +295,28 @@ The best-fit model is illustrated in Fig. \ref{fig:comb} and the corresponding c
 
 We proceed with a further calibration of the redshift distribution using the iterative fitting method of cosmological and nuisance parameters described in Sect. \ref{sec:calibration}. The fit result after each step for the three most interesting cosmological parameters $A_{IA}$, $\Omega_m$, and $S_8$ are reported in Table \ref{tab:iterative_calibration}. 
 \begin{table}
-\begin{tabular}{lllll}
-& $A_{IA}$ & $\Omega_m$ & $S_8$ & $\chi^2$\\
+\begin{tabular}{llll}
+%& $A_{IA}$ & $\Omega_m$ & $S_8$ & $\chi^2$\\
+%\hline
+%\hline
+%fiducial KV450 likelihood & $0.8656$ & $0.2146$ & $0.7708$ & $179.8831$\\
+%\hline
+%1. cosmology optimisation & $0.7353$ & $0.2139$ & $0.7768$ & $180.67$\\
+%2. nuisance optimisation & --- & --- & --- & $179.105$\\
+%3. cosmology optimisation & $0.7903$ & $0.213$ & $0.7882$ & $178.617$\\
+& $A_{IA}$ & $S_8$ & $\chi^2$\\
 \hline
 \hline
-fiducial KV450 likelihood & $0.8656$ & $0.2146$ & $0.7708$ & $179.8831$\\
+fiducial KV450 likelihood & $0.8656$  & $0.7708$ & $179.8831$\\
 \hline
-1. cosmology optimisation & $0.7353$ & $0.2139$ & $0.7768$ & $180.67$\\
-2. nuisance optimisation & --- & --- & --- & $179.105$\\
-3. cosmology optimisation & $0.7903$ & $0.213$ & $0.7882$ & $178.617$\\
+1. cosmology optimisation & $0.7353$  & $0.7768$ & $180.67$\\
+2. nuisance optimisation & ---  & --- & $179.105$\\
+3. cosmology optimisation & $0.7903$  & $0.7882$ & $178.617$\\
 \end{tabular}
-\caption{Results of the iterative fitting of cosmological and nuisance parameters to the KV450 cosmic shear data and comparison to the fiducial KV450 likelihood. When optimising cosmological parameters we fit $\omega_{\rm cdm}$, $\omega_{\rm b}$, $A_{\rm s}$, $n_{\rm s}$, and $h$ as well as the nuisance parameters $A_{\rm IA}$, $A_{\rm bary}$, $\delta c$, and $A_{\rm c}$. When optimising nuisance parameters we vary the amplitudes of the gaussian comb. Results are shown for the three most interesting parameters, for which the cosmic shear likelihood has the largest constraining power. We find convergence after three iterations of the calibration, resulting in a better fit to the cosmic shear data compared to the fiducial analysis.}
+\caption{Results of the iterative fitting of cosmological and nuisance parameters to the KV450 cosmic shear data and comparison to the fiducial KV450 likelihood. When optimising cosmological parameters we fit $\omega_{\rm cdm}$, $\omega_{\rm b}$, $A_{\rm s}$, $n_{\rm s}$, and $h$ as well as the nuisance parameters $A_{\rm IA}$, $A_{\rm bary}$, $\delta c$, and $A_{\rm c}$. When optimising nuisance parameters we vary the amplitudes of the gaussian comb. Results are shown for the two most interesting parameters, for which the cosmic shear likelihood has the largest constraining power. We find convergence after three iterations of the calibration, resulting in a better fit to the cosmic shear data compared to the fiducial analysis.}
 \label{tab:iterative_calibration}
 \end{table}
-The iterative optimisation method shows a fast convergence to the best-fit in the full parameter space of cosmological and nuisance parameters after only three iterations. This is expected since we start from an already well calibrated redshift distribution so that expect only small shifts of the redshift distribution. Comparing the best fit $\chi^2$ values we find that our model provides a better fit to the cosmic shear data than the fiducial KV450 model. This indicates that a linear shift of the mean of the redshift distribution indeed does not capture the full variance of the data and that it is beneficial to allow for a full shift of the redshift distribution when deriving constraints on cosmological parameters. Interestingly, we find the the matter density $\Omega_m$ does not shift significantly when switching from a linear shift of the mean of the redshift distribution to a full shift, while the values of the intrinsic alignment amplitude $A_{\rm IA}$ and $S_8$ show a more significant shift.
+The iterative optimisation method shows a fast convergence to the best-fit in the full parameter space of cosmological and nuisance parameters after only three iterations. This is expected since we start from an already well calibrated redshift distribution so that expect only small shifts of the redshift distribution. Comparing the best fit $\chi^2$ values we find that our model provides a better fit to the cosmic shear data than the fiducial KV450 model. This indicates that a linear shift of the mean of the redshift distribution indeed does not capture the full variance of the data and that it is beneficial to allow for a full shift of the redshift distribution when deriving constraints on cosmological parameters. We find a shift of the two most interesting parameters, for which the cosmic shear likelihood has the largest constraining power, $A_{\rm IA}$ and $S_8$, compared to the fiducial KV450 analysis. These shifts are further investigated in the following section, where we sample the weak lensing likelihood and derive marginalised posteriors of cosmological parameters. 
 
 \subsection{Marginalisation over nuisance parameters} 
 Using the redshift distribution that were calibrated in the previous section we sample the weak lensing likelihood in cosmological parameter space with analytical marginalisation over the uncertainty on the amplitudes of the fitted redshift distribution. We implement the marginalised likelihood given in Eq. \ref{eq:marginal_likelihood} in the existing KV450 likelihood, which is publicly available in {\sc MontePython}. We choose priors on cosmological parameters and nuisance parameters equivalent to the ones in \cite{hildebrandt18}. Note that in contrast to the fiducial KV450 analysis we do not include linear shifts $\delta z_i$ of the mean redshift in each tomographic bin as nuisance parameters since the variance of the redshift distribution is covered by the uncertainties on the amplitudes of the comb model. Our choice of priors is reported in Table \ref{tab:priors}.
@@ -315,9 +326,9 @@ Using the redshift distribution that were calibrated in the previous section we 
 \hline
 Parameter & Symbol & Prior\\
 \hline
-CDM density & $\Omega_{\rm CDM} h^2$ & $[0.01, 0.99]$\\
+CDM density & $\omega_{\rm CDM}$ & $[0.01, 0.99]$\\
 Scalar spectrum ampl. & $\ln(10^{10}A_{\rm s})$ & $[1.7, 5.0]$\\
-Baryon density & $\Omega_{\rm b} h^2$ & $[0.019, 0.026]$ \\
+Baryon density & $\omega_{\rm b}$ & $[0.019, 0.026]$ \\
 Scalar spectral index & $n_{\rm s}$ & $[0.7, 1.3]$ \\
 Hubble parameter & $h$ & $[0.64, 0.82]$ \\
 \hline
@@ -329,7 +340,7 @@ Constant $c$-term offset & $\delta c$ & $0.0000\pm0.0002$ \\
 \end{tabular}
 \caption{Model parameters and their priors for the KV450 cosmic shear analysis, adopted from \cite{hildebrandt18}. The first five lines are cosmological parameters while the remaining lines represent nuisance parameters. Brackets indicate top-hat priors while values with errors indicate Gaussian priors. Note that in contrast to \cite{hildebrandt18}, linear shifts of the mean of the redshifts distributions are excluded.}
 \end{table}
-Prior to the sampling of the marginalised likelihood we test whether we can reproduce the fiducial KV450 result by sampling the KV450 likelihood using the comb model, but without marginalisation over nuisance parameters. The results of this consistency test are discussed in Appendix \ref{ap:kv450_likelihood} and show that the two models are in excellent agreement. 
+Prior to the sampling of the marginalised likelihood we test whether we can reproduce the result of the fiducial KV450 analysis by sampling the likelihood with the comb model, but without applying the marginalisation over nuisance parameters. The results of this consistency test are discussed in Appendix \ref{ap:kv450_likelihood} and show that the two models are in excellent agreement. 
 %--------------------------------------------------------------------
 \section{Conclusions}
 \label{sec:discussion}
